Minor layout bugfix

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -15,9 +15,10 @@
 
     #title {
         color: settings.$color-light;
-        font-size: 3em;
+        font-size: 2.5em;
         font-weight: bold;
         text-transform: uppercase;
         margin-left: 0.35em;
+        font-weight: 900;
     }
 }
